# sleshko

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dump_samples.py  eval_set.csv  main.py  pydantic_model.py  pyproject.toml
docs/: FILE_EXTRACTION_INFO.md  PLANNING.md  RETROSPECTIVE.md  STRATEGIES.md
src/: config.py  k1_codes.py  logger.py  ports.py  registry.py  sample_outputs_runner.py  statement_totals.py  strategies.py
src/analysis/: acroform_cover.py  acroform_gemini_selective.py  flattened_cover.py  gemini_pdf.py  gemini_text.py  gemini_vision.py  gemini_vision_acroform.py  hybrid_max_fidelity.py
src/domain/: document.py  extraction_result.py  field_catalog.py  page_roles.py  scoring.py
src/eval/: eval_set.py  normalize.py  report.py  runner.py  scorer.py
src/extraction/: acroform.py  pymupdf_text.py
src/infra/: gemini_client.py  pdf_render.py
src/prompts/: k1_extraction.py
