[project]
name = "k1-extraction"
version = "0.1.0"
description = "Composable extraction/analysis pipeline for IRS Schedule K-1 forms, with a strategy-comparison eval harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "google-genai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# src/ is the import root (absolute imports: `from domain.document import ...`).
[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
